@@ -1,3 +1,7 @@
+2005-04-14  Alan Modra  <amodra@bigpond.net.au>
+
+	* merge.c (merge_strings): Round up section size for alignment.
+
 2005-04-14  David S. Miller  <davem@davemloft.net>
 
 	Add TLS support for 64-bit Sparc ELF.
